--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "socializr",
-  "version": "0.0.24",
+  "version": "0.0.25",
   "description": "Read data streams from several social networks.",
   "main": "index.js",
   "scripts": {
@@ -33,6 +33,7 @@
   "dependencies": {
     "MD5": "^1.2.0",
     "underscore": "^1.6.0",
-    "superagent": "0.17.x"
+    "superagent": "0.17.x",
+    "async": "^0.6.2"
   }
 }
