--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Read data streams from several social networks.",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "test": "make test",
+    "test-cov": "make test-cov"
   },
   "repository": {
     "type": "git",
@@ -28,7 +29,11 @@
     "mocha": "^1.17.1",
     "should": "^3.1.3",
     "supertest": "^0.9.0",
-    "express": "^3.4.8"
+    "express": "^3.4.8",
+    "mocha-lcov-reporter": "0.0.2",
+    "coveralls": "^2.11.2",
+    "istanbul": "^0.3.13",
+    "docco": "^0.7.0"
   },
   "dependencies": {
     "MD5": "^1.2.0",
